--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Let&rsquo;s Make Random Numbers</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-$END$
+<h1>Let&rsquo;s Make Random Numbers</h1>
+<script src="app.js"></script>
 </body>
 </html>
