--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Let&rsquo;s Make Random Numbers</h1>
-<script src="app.js"></script>
+<script src="prompt.js"></script>
 </body>
 </html>
