Create a randomRGB function

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Let&rsquo;s Make Random Numbers</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="color">
 <h1>Let&rsquo;s Make Random Numbers</h1>
 <script src="refactor.js"></script>
 </body>
